LOG/2024-11-21/16:55:34-build-debug_x86_64.LOG
==== Building spdlog (debug_x86_64) ====
==== Building TP (debug_x86_64) ====
main.cpp
Source/main.cpp: In function ‘int main(int, const char**)’:
Source/main.cpp:32:10: error: cannot convert ‘EX::__input_t*’ to ‘EX::__input_t**’
   32 |   EX::ex(__input, __output, argv[1]);
      |          ^~~~~~~
      |          |
      |          EX::__input_t*
In file included from Source/main.cpp:1:
Source/EX.h:10:21: note:   initializing argument 1 of ‘void EX::ex(__input_t**, __output_t**, const char*)’
   10 | void ex(__input_t **in, __output_t **out, const char __solution_path[]);
      |         ~~~~~~~~~~~~^~
make[1]: *** [TP.make:184: bin/obj/x86_64_Debug/main.o] Error 1
make: *** [Makefile:50: TP] Error 2
